# zero-copy-tensor-ipc

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
docs/: interview-prep.md
src/zero_copy_tensor_ipc/: README.md  __init__.py  ipc.py
tests/: test_core.py
